# CronyxLang

./: .gitignore  CLAUDE.md  README.md  scratch.cx
.github/workflows/: auto-tag.yml  ci.yml  deploy-docs.yml  release-vscode.yml  release.yml  snapshot.yml
bootstrap/: .gitignore  build.rs
bootstrap/.cargo/: config.toml
bootstrap/src/: args.rs  config.rs  debug_sink.rs  error.rs  lib.rs  main.rs
bootstrap/tests/: compile_all_integration.rs  compile_integration.rs  phase2_tests.rs  (+6 more)
docs/: .gitignore  CODE_REVIEW.md  Compiler Error Handling.md  Cronyx Language Reference.md  Cronyx Module System.md  Cronyx Type System.md  Cronyx.md  Effect Typing.md  Path to 0.1.0.md  Path to 0.1.1.md  Path to 0.1.4.md  Phase Architecture.md  README.md  TypeSystem.md  Useful Commands.md  docusaurus.config.js  docusaurus.config.ts  llvm-compilation-branch-review.md  package-lock.json  package.json
obsidian/: Cronyx Language Reference.md  Cronyx Module System.md  Cronyx.md  Effect Typing.md  LONG_TERM_BUGS.md  Meta Functions.md  TypeSystem.md  llvm-compilation-fix-plan.md
rust_comp/: Cargo.toml  build.rs
rust_comp/.cargo/: config.toml
rust_comp/src/: args.rs  debug_sink.rs  error.rs  lib.rs  main.rs
rust_comp/src/codegen/: mod.rs
rust_comp/src/frontend/: id_provider.rs  lexer.rs  meta_ast.rs  mod.rs  module_loader.rs  parser.rs  token.rs
rust_comp/src/runtime/: environment.rs  gen_collector.rs  interpreter.rs  mod.rs  result.rs  value.rs
rust_comp/src/semantics/cps/: cps_transform.rs  effect_marker.rs  handler_transform.rs  mod.rs
rust_comp/src/semantics/meta/: conversion.rs  gen_collector.rs  interpreter_meta_evaluator.rs  meta_process_error.rs  meta_processor.rs  meta_stager.rs  mod.rs  monomorphize.rs  process_dependency.rs  runtime_ast.rs  staged_ast.rs  staged_forest.rs  symbol_collector.rs  work_queue.rs
rust_comp/src/semantics/types/: effect_inference.rs  enum_registry.rs  mod.rs  runtime_type_checker.rs  type_annotated_view.rs  type_checker.rs  type_env.rs  type_error.rs  type_subst.rs  type_utils.rs  type_var_verify.rs  typed_ast.rs  types.rs
rust_comp/src/util/: formatter.rs  id_provider.rs  mod.rs  node_id.rs
rust_comp/tests/: compile_all_integration.rs  compile_integration.rs  phase2_tests.rs  script_integration.rs  type_check_tests.rs  type_subst_tests.rs  type_utils_tests.rs
(+445 files in other folders)
