[package]
name = "cronyx"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cronyxc"
path = "src/main.rs"

[dependencies]
inkwell = { version = "0.9", features = ["llvm20-1"] }

# force-dynamic only on Linux: avoids missing static Polly lib in APT packages.
# macOS (brew) and Windows (LLVM installer) use static linking — no Polly issue there.
[target.'cfg(target_os = "linux")'.dependencies]
llvm-sys = { version = "201", features = ["force-dynamic"] }
