[package]
name = "cronyx"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cronyxc"
path = "src/main.rs"

[dependencies]
inkwell = { version = "0.9", features = ["llvm20-1"] }

# force-dynamic on Linux (APT lacks static Polly lib) and Windows (official pre-built
# tarball only includes X86/AArch64 static libs; exotic targets like Mips/Sparc/AMDGPU
# that inkwell references are absent — LLVM-C.dll is the complete shared build).
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
llvm-sys = { version = "201", features = ["force-dynamic"] }
